syntax = "proto3";

package tool;

import "common/details.proto";
import "common/entities.proto";
import "common/metadata.proto";
import "google/protobuf/struct.proto";

option go_package = "github.com/compozy/compozy/pkg/pb/tool";

enum ToolStatus {
  TOOL_STATUS_UNSPECIFIED = 0;
  TOOL_STATUS_RUNNING = 1;
  TOOL_STATUS_SUCCESS = 2;
  TOOL_STATUS_FAILED = 3;
}

// -----------------------------------------------------------------------------
// Tool Execution Started Event
// -----------------------------------------------------------------------------

message ToolExecutionStartedEvent {
  common.Metadata metadata = 1;
  common.WorkflowInfo workflow = 2;
  common.TaskInfo task = 3;
  common.ToolInfo tool = 4;

  message Details {
    ToolStatus status = 1;
  }
  Details details = 5;
}

// -----------------------------------------------------------------------------
// Tool Execution Success Event
// -----------------------------------------------------------------------------

message ToolExecutionSuccessEvent {
  common.Metadata metadata = 1;
  common.WorkflowInfo workflow = 2;
  common.TaskInfo task = 3;
  common.ToolInfo tool = 4;

  message Details {
    ToolStatus status = 1;
    google.protobuf.Struct result = 2;
    int64 duration_ms = 3;
  }
  Details details = 5;
}

// -----------------------------------------------------------------------------
// Tool Execution Failed Event
// -----------------------------------------------------------------------------

message ToolExecutionFailedEvent {
  common.Metadata metadata = 1;
  common.WorkflowInfo workflow = 2;
  common.TaskInfo task = 3;
  common.ToolInfo tool = 4;

  message Details {
    ToolStatus status = 1;
    common.ErrorResult error = 2;
    int64 duration_ms = 3;
  }
  Details details = 5;
}
